--- a/platformio.ini
+++ b/platformio.ini
@@ -79,21 +79,23 @@ build_flags =
   -D DEBUG_BUILD=1
   -D DEBUG_SERIAL
   -D PRINT_COMMS_STATE=1
-  # -D PRINT_COMMS_STATE_EVENT=1
-  # -D PRINT_THROTTLE=1
-  # -D PRINT_BUTTON_EVENTS=1
+  ; -D PRINT_COMMS_STATE_EVENT=1
+  ; -D PRINT_THROTTLE=1
+  ; -D PRINT_BUTTON_EVENTS=1
   -D PRINT_RESET_DETECTION=1
   -D PRINT_DISP_STATE=1
   -D PRINT_DISP_STATE_EVENT=1
-  # -D PRINT_IF_TOTAL_FAILED_SENDING=1
-  # -D PRINT_TX_TO_BOARD=1
-  # -D PRINT_RX_FROM_BOARD=1
-  # -D PRINT_TX_TO_HUD=1
-  # -D PRINT_RX_FROM_HUD=1
-  # -D PRINT_HUD_TASKS_QUEUE_SEND=1
-  # -D PRINT_HUD_TASKS_QUEUE_READ=1
-  # -D PRINT_HUD_ACTION_QUEUE_SEND=1
-  # -D PRINT_HUD_ACTION_QUEUE_READ=1
+  ; -D PRINT_IF_TOTAL_FAILED_SENDING=1
+  ; -D PRINT_TX_TO_BOARD=1
+  ; -D PRINT_RX_FROM_BOARD=1
+
+; HUD stuff
+  ; -D PRINT_TX_TO_HUD=1
+  -D PRINT_RX_FROM_HUD=1
+  -D PRINT_HUD_TASKS_QUEUE_SEND=1
+  -D PRINT_HUD_TASKS_QUEUE_READ=1
+  ; -D PRINT_HUD_ACTION_QUEUE_SEND=1
+  ; -D PRINT_HUD_ACTION_QUEUE_READ=1
   
   -D FEATURE_CRUISE_CONTROL=true
   -D FEATURE_PUSH_TO_START=true
@@ -116,7 +118,7 @@ build_flags =
   ${env:ESP32_CORES}
 
   -D RELEASE_BUILD
-  # -D DEBUG_SERIAL
+  ; -D DEBUG_SERIAL
   -D FEATURE_CRUISE_CONTROL
   -D FEATURE_PUSH_TO_START=true
   -D SEND_TO_BOARD_INTERVAL=200
@@ -161,21 +163,21 @@ build_flags =
   -D DEBUG_BUILD=1
   -D DEBUG_SERIAL
   -D PRINT_COMMS_STATE=1
-  # -D PRINT_COMMS_STATE_EVENT=1
-  # -D PRINT_THROTTLE=1
-  # -D PRINT_BUTTON_EVENTS=1
+  ; -D PRINT_COMMS_STATE_EVENT=1
+  ; -D PRINT_THROTTLE=1
+  ; -D PRINT_BUTTON_EVENTS=1
   -D PRINT_RESET_DETECTION=1
   -D PRINT_DISP_STATE=1
   -D PRINT_DISP_STATE_EVENT=1
-  # -D PRINT_IF_TOTAL_FAILED_SENDING=1
-  # -D PRINT_TX_TO_BOARD=1
-  # -D PRINT_RX_FROM_BOARD=1
-  # -D PRINT_TX_TO_HUD=1
-  # -D PRINT_RX_FROM_HUD=1
-  # -D PRINT_HUD_TASKS_QUEUE_SEND=1
-  # -D PRINT_HUD_TASKS_QUEUE_READ=1
-  # -D PRINT_HUD_ACTION_QUEUE_SEND=1
-  # -D PRINT_HUD_ACTION_QUEUE_READ=1
+  ; -D PRINT_IF_TOTAL_FAILED_SENDING=1
+  ; -D PRINT_TX_TO_BOARD=1
+  ; -D PRINT_RX_FROM_BOARD=1
+  ; -D PRINT_TX_TO_HUD=1
+  ; -D PRINT_RX_FROM_HUD=1
+  ; -D PRINT_HUD_TASKS_QUEUE_SEND=1
+  ; -D PRINT_HUD_TASKS_QUEUE_READ=1
+  ; -D PRINT_HUD_ACTION_QUEUE_SEND=1
+  ; -D PRINT_HUD_ACTION_QUEUE_READ=1
   
   -D FEATURE_CRUISE_CONTROL=true
   -D FEATURE_PUSH_TO_START=true
