How easy is it to add an extra client?

--- a/platformio.ini
+++ b/platformio.ini
@@ -107,6 +107,8 @@ build_flags =
   -D STORE_SNAPSHOT_INTERVAL=5000
   -D SUPPRESS_EV_COMMS_PKT_RXD=1
 
+  -D COMMS_M5ATOM=03
+
 ;-------------------------------------------------------
 [env:esp32dev.release]
 src_filter = ${dir.main}
