--- a/platformio.ini
+++ b/platformio.ini
@@ -90,8 +90,8 @@ build_flags =
   ; -D PRINT_RX_FROM_BOARD=1
 
 ; HUD stuff
-  ; -D PRINT_TX_TO_HUD=1
   -D PRINT_RX_FROM_HUD=1
+  -D PRINT_TX_TO_HUD=1
   -D PRINT_HUD_TASKS_QUEUE_SEND=1
   -D PRINT_HUD_TASKS_QUEUE_READ=1
   ; -D PRINT_HUD_ACTION_QUEUE_SEND=1
@@ -99,7 +99,7 @@ build_flags =
   
   -D FEATURE_CRUISE_CONTROL=true
   -D FEATURE_PUSH_TO_START=true
-  -D SEND_TO_BOARD_INTERVAL=500
+  -D SEND_TO_BOARD_INTERVAL=200
   -D LONGCLICK_MS=1000
   -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=3
   -D IGNORE_IF_HUD_OFFLINE=1
