Added Button2 example.

--- a/platformio.ini
+++ b/platformio.ini
@@ -2,6 +2,7 @@
 default_envs = esp32dev.debug
 # default_envs = esp32dev.release
 # default_envs = WioTerminal.debug
+; default_envs = Button2.example
 #------------------------------------------------
 
 [env]
@@ -21,6 +22,7 @@ build_flags =
 
 lib_deps = 
   https://github.com/skelstar/Button2.git#longpress_detected
+  ; https://github.com/LennartHennigs/Button2.git
   https://github.com/pfeerick/elapsedMillis.git
 
   https://github.com/greiman/DigitalIO.git
@@ -190,8 +192,18 @@ build_flags =
   ; how often we store moving time data in memory
   -D STORE_SNAPSHOT_INTERVAL=5000
   -D SUPPRESS_EV_COMMS_PKT_RXD=1
+#------------------------------------------------
+
+[env:Button2.example]
+src_filter = ${dir.button2}
+platform=${env:ESP32_Common.platform}
+board=${env:ESP32_Common.board}
+
+build_flags = 
+  -D DEBUG_SERIAL
 
 ;-------------------------------------------------------
 
 [dir]
 main = +<main/>
+button2 = +<button2/>
