--- a/platformio.ini
+++ b/platformio.ini
@@ -71,6 +71,7 @@ src_filter = ${dir.main}
 
 platform=${env:ESP32_Common.platform}
 board=${env:ESP32_Common.board}
+monitor_filters=${env:ESP32_Common.monitor_filters}
 
 build_flags = 
 
@@ -82,11 +83,11 @@ build_flags =
   -D DEBUG_SERIAL
   -D PRINT_COMMS_STATE=1
   ; -D PRINT_COMMS_STATE_EVENT=1
-  ; -D PRINT_THROTTLE=1
+  -D PRINT_THROTTLE=1
   ; -D PRINT_BUTTON_EVENTS=1
   -D PRINT_RESET_DETECTION=1
-  -D PRINT_DISP_STATE=1
-  -D PRINT_DISP_STATE_EVENT=1
+  ; -D PRINT_DISP_STATE=1
+  ; -D PRINT_DISP_STATE_EVENT=1
   ; -D PRINT_IF_TOTAL_FAILED_SENDING=1
   ; -D PRINT_TX_TO_BOARD=1
   ; -D PRINT_RX_FROM_BOARD=1
@@ -152,9 +153,6 @@ build_flags=
 
 [env:WioTerminal.debug]
 src_filter = ${dir.main}
-
-platform = atmelsam
-board = seeed_wio_terminal
 
 lib_deps =
   https://github.com/Seeed-Studio/Seeed_Arduino_LCD.git
