--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 [platformio]
-default_envs = esp32dev.debug
-# default_envs = esp32dev.release
+; default_envs = esp32dev.debug
+default_envs = esp32dev.release
 # default_envs = WioTerminal.debug
 ; default_envs = Button2.example
 #------------------------------------------------
@@ -46,6 +46,8 @@ lib_deps =
 
 build_flags =
   -D IS_ESP32
+  -D LONGCLICK_MS=1000
+
 #------------------------------------------------
 
 [env:ESP32_SPI]
@@ -92,6 +94,9 @@ build_flags =
   ; -D PRINT_TX_TO_BOARD=1
   ; -D PRINT_RX_FROM_BOARD=1
 
+  ; -D PRINT_HUD_CLIENT_CONNECTED_CHANGED=1
+  ; -D PRINT_BOARD_CLIENT_CONNECTED_CHANGED=1
+
 ; HUD stuff
   -D PRINT_RX_FROM_HUD=1
   -D PRINT_TX_TO_HUD=1
@@ -103,7 +108,6 @@ build_flags =
   -D FEATURE_CRUISE_CONTROL=true
   -D FEATURE_PUSH_TO_START=true
   -D SEND_TO_BOARD_INTERVAL=200
-  -D LONGCLICK_MS=1000
   -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=3
   -D IGNORE_IF_HUD_OFFLINE=1
   ; how often we store moving time data in memory
@@ -116,13 +120,17 @@ build_flags =
 [env:esp32dev.release]
 src_filter = ${dir.main}
 
+platform=${env:ESP32_Common.platform}
+board=${env:ESP32_Common.board}
+lib_deps=${env:ESP32_Common.lib_deps}
 build_flags = 
 
   ${env.build_flags}
   ${env:ESP32_SPI.build_flags}
-  ${env:ESP32_CORES}
+  ${env:ESP32_CORES.build_flags}
+  ${env:ESP32_Common.build_flags}
 
-  -D RELEASE_BUILD
+  -D RELEASE_BUILD=1
   ; -D DEBUG_SERIAL
   -D FEATURE_CRUISE_CONTROL
   -D FEATURE_PUSH_TO_START=true
