Changed instruction sent when board goes offline

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 [platformio]
-; default_envs = esp32dev.debug
-default_envs = esp32dev.release
+default_envs = esp32dev.debug
+; default_envs = esp32dev.release
 # default_envs = WioTerminal.debug
 ; default_envs = Button2.example
 #------------------------------------------------
@@ -83,7 +83,7 @@ build_flags =
 
   -D DEBUG_BUILD=1
   -D DEBUG_SERIAL
-  -D PRINT_COMMS_STATE=1
+  ; -D PRINT_COMMS_STATE=1
   ; -D PRINT_COMMS_STATE_EVENT=1
   -D PRINT_THROTTLE=1
   ; -D PRINT_BUTTON_EVENTS=1
@@ -98,9 +98,9 @@ build_flags =
   ; -D PRINT_BOARD_CLIENT_CONNECTED_CHANGED=1
 
 ; HUD stuff
-  -D PRINT_RX_FROM_HUD=1
+  ; -D PRINT_RX_FROM_HUD=1
   -D PRINT_TX_TO_HUD=1
-  -D PRINT_HUD_TASKS_QUEUE_SEND=1
+  ; -D PRINT_HUD_TASKS_QUEUE_SEND=1
   -D PRINT_HUD_TASKS_QUEUE_READ=1
   ; -D PRINT_HUD_ACTION_QUEUE_SEND=1
   ; -D PRINT_HUD_ACTION_QUEUE_READ=1
