Started to put HUD behind a feature flag

--- a/platformio.ini
+++ b/platformio.ini
@@ -107,6 +107,7 @@ build_flags =
   
   -D FEATURE_CRUISE_CONTROL=true
   -D FEATURE_PUSH_TO_START=true
+  ; -D FEATURE_SEND_TO_HUD=1
   -D SEND_TO_BOARD_INTERVAL=200
   -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=3
   -D IGNORE_IF_HUD_OFFLINE=1
@@ -132,7 +133,7 @@ build_flags =
 
   -D RELEASE_BUILD=1
   ; -D DEBUG_SERIAL
-  -D FEATURE_CRUISE_CONTROL
+  -D FEATURE_CRUISE_CONTROL=true
   -D FEATURE_PUSH_TO_START=true
   -D SEND_TO_BOARD_INTERVAL=200
   -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=3
