drawing board battery for 1.5 seconds whenever the board comes to a stop.

--- a/platformio.ini
+++ b/platformio.ini
@@ -47,6 +47,7 @@ lib_deps =
 build_flags =
   -D IS_ESP32
   -D LONGCLICK_MS=1000
+  -D DISP_BOARD_BATTERY_TIME=1500
 
 #------------------------------------------------
 
@@ -80,6 +81,7 @@ build_flags =
   ${env.build_flags}
   ${env:ESP32_SPI.build_flags}
   ${env:ESP32_CORES.build_flags}
+  ${env:ESP32_Common.build_flags}
 
   -D DEBUG_BUILD=1
   -D DEBUG_SERIAL
