--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,21 +1,21 @@
 {
   "workbench.colorCustomizations": {
     "editor.lineHighlightBackground": "#474747",
+    "statusBar.background": "#ff3d00",
+    "statusBar.foreground": "#e7e7e7",
+    "statusBarItem.hoverBackground": "#ff6433",
+    "tab.activeBorder": "#ff6433",
+    "titleBar.activeBackground": "#ff3d00",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.inactiveBackground": "#ff3d0099",
+    "titleBar.inactiveForeground": "#e7e7e799",
     "activityBar.activeBackground": "#ff6433",
     "activityBar.activeBorder": "#00ff3d",
     "activityBar.background": "#ff6433",
     "activityBar.foreground": "#15202b",
     "activityBar.inactiveForeground": "#15202b99",
     "activityBarBadge.background": "#00ff3d",
-    "activityBarBadge.foreground": "#15202b",
-    "statusBar.background": "#ff3d00",
-    "statusBar.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#ff6433",
-    "titleBar.activeBackground": "#ff3d00",
-    "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.inactiveBackground": "#ff3d0099",
-    "titleBar.inactiveForeground": "#e7e7e799",
-    "tab.activeBorder": "#ff6433"
+    "activityBarBadge.foreground": "#15202b"
   },
   "files.associations": {
     "*.tcc": "cpp",
@@ -60,8 +60,17 @@
     "streambuf": "cpp",
     "cinttypes": "cpp",
     "utility": "cpp",
-    "typeinfo": "cpp"
+    "typeinfo": "cpp",
+    "*.ipp": "cpp",
+    "chrono": "cpp",
+    "ratio": "cpp",
+    "forward_list": "cpp",
+    "cassert": "cpp",
+    "cerrno": "cpp",
+    "cfloat": "cpp",
+    "ciso646": "cpp",
+    "climits": "cpp"
   },
-  "editor.formatOnSave": true,
-  "peacock.color": "#ff3d00"
+  "peacock.color": "#ff3d00",
+  "editor.formatOnSaveMode": "modifications"
 }
