--- a/platformio.ini
+++ b/platformio.ini
@@ -1,62 +1,140 @@
 [platformio]
 ; default_envs = esp32dev.debug
 default_envs = esp32dev.release
-; default_envs = esp32dev.rtos_play
-; default_envs = esp32dev.nrf_tft_spi_sharing
-; default_envs = comms_ping
-; default_envs = fonts_demo
+# default_envs = WioTerminal.debug
+; default_envs = Button2.example
+#------------------------------------------------
 
 [env]
-platform = espressif32
-board = esp32dev ; nodemcu-32s
 framework = arduino
 
-monitor_speed = 115200
 upload_port = COM6
 monitor_port = COM6
+monitor_speed = 115200
 test_port = $upload_port
 
 test_filter = test_smoother
 
 build_flags =
-  -D VERSION=2.7
-  -D VERSION_BOARD_COMPAT=2.5
+  -D VERSION=2.8
+  -D VERSION_BOARD_COMPAT=3.0
+  !python ./getCurrentGitBranch.py ; GIT_BRANCH_NAME
 
 lib_deps = 
-  https://github.com/lewisxhe/Button2.git
-  https://github.com/bblanchon/ArduinoJson.git#6.x
+  https://github.com/LennartHennigs/Button2.git
   https://github.com/pfeerick/elapsedMillis.git
 
-  https://github.com/skelstar/arduino-fsm.git#examples-and-platformio
-  https://github.com/skelstar/Esk8-Shared#d13e19d9b
-  https://github.com/tttapa/Arduino-Helpers
-  
   https://github.com/greiman/DigitalIO.git
+  https://github.com/nRF24/RF24.git
   https://github.com/nRF24/RF24Network.git
-  https://github.com/skelstar/NRF24L01.Library.git#v1.0
-  
-  https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
   https://github.com/RobTillaart/FastMap.git
   
+  https://github.com/skelstar/arduino-fsm.git#v2.3
+  https://github.com/skelstar/NRF24L01.Library.git#v1.1
+  https://github.com/skelstar/Esk8-Shared.git#v1.1
+
+#------------------------------------------------
+
+[env:ESP32_Common]
+platform = espressif32
+board = nodemcu-32s
+
+monitor_filters = time, esp32_exception_decoder
+
+lib_deps = 
+  https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
+
+build_flags =
+  -D IS_ESP32
+  -D LONGCLICK_MS=1000
+  -D DISP_SOFTWARE_STATS_TIME=1500
+  -D DISP_BOARD_BATTERY_TIME=800
+
+#------------------------------------------------
+
+[env:ESP32_SPI]
+build_flags = 
+  -D SOFT_SPI_MOSI_PIN=13 # Blue
+  -D SOFT_SPI_MISO_PIN=12 # Orange
+  -D SOFT_SPI_SCK_PIN=15  # Yellow
+  -D NRF_CE=17
+  -D NRF_CS=2
+  -D SOFTSPI
+
+[env:ESP32_CORES]
+build_flags =
+  -D DISPLAY_TASK_CORE=0
+  -D COMMS_TASK_CORE=0
+  -D BATTERY_TASK_CORE=0
+  -D HUD_TASK_CORE=1
+
 ;-------------------------------------------------------
+
 [env:esp32dev.debug]
 src_filter = ${dir.main}
-monitor_filters = esp32_exception_decoder ; , time ;, default
-; build_type = debug
+
+platform=${env:ESP32_Common.platform}
+board=${env:ESP32_Common.board}
+monitor_filters=${env:ESP32_Common.monitor_filters}
 
 build_flags = 
 
   ${env.build_flags}
+  ${env:ESP32_SPI.build_flags}
+  ${env:ESP32_CORES.build_flags}
+  ${env:ESP32_Common.build_flags}
 
-  -D DEBUG_BUILD
+  -D DEBUG_BUILD=1
   -D DEBUG_SERIAL
-  -D PRINT_COMMS_STATE
-  -D PRINT_COMMS_STATE_EVENT
-  -D PRINT_SEND_RETRIES
-  ; -D PRINT_THROTTLE
-  ; -D PRINT_RESET_DETECTION
-  -D PRINT_DISP_STATE
-  ; -D PRINT_DISP_STATE_EVENT
+  ; -D PRINT_COMMS_STATE=1
+  ; -D PRINT_COMMS_STATE_EVENT=1
+  -D PRINT_THROTTLE=1
+  ; -D PRINT_BUTTON_EVENTS=1
+  -D PRINT_RESET_DETECTION=1
+  ; -D PRINT_DISP_STATE=1
+  ; -D PRINT_DISP_STATE_EVENT=1
+  ; -D PRINT_IF_TOTAL_FAILED_SENDING=1
+  ; -D PRINT_TX_TO_BOARD=1
+  ; -D PRINT_RX_FROM_BOARD=1
+
+  ; -D PRINT_HUD_CLIENT_CONNECTED_CHANGED=1
+  ; -D PRINT_BOARD_CLIENT_CONNECTED_CHANGED=1
+
+; HUD stuff
+  ; -D PRINT_RX_FROM_HUD=1
+  -D PRINT_TX_TO_HUD=1
+  ; -D PRINT_HUD_TASKS_QUEUE_SEND=1
+  -D PRINT_HUD_TASKS_QUEUE_READ=1
+  ; -D PRINT_HUD_ACTION_QUEUE_SEND=1
+  ; -D PRINT_HUD_ACTION_QUEUE_READ=1
+  
+  -D FEATURE_CRUISE_CONTROL=true
+  -D FEATURE_PUSH_TO_START=true
+  ; -D FEATURE_SEND_TO_HUD=1
+  -D SEND_TO_BOARD_INTERVAL=200
+  -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=3
+  -D IGNORE_IF_HUD_OFFLINE=1
+  ; how often we store moving time data in memory
+  -D STORE_SNAPSHOT_INTERVAL=5000
+  -D SUPPRESS_EV_COMMS_PKT_RXD=1
+
+  -D COMMS_M5ATOM=03
+
+;-------------------------------------------------------
+[env:esp32dev.release]
+src_filter = ${dir.main}
+
+platform=${env:ESP32_Common.platform}
+board=${env:ESP32_Common.board}
+build_flags = 
+
+  ${env.build_flags}
+  ${env:ESP32_SPI.build_flags}
+  ${env:ESP32_CORES.build_flags}
+  ${env:ESP32_Common.build_flags}
+
+  -D RELEASE_BUILD=1
+  ; -D DEBUG_SERIAL
   -D FEATURE_CRUISE_CONTROL=true
   -D FEATURE_PUSH_TO_START=true
   -D SEND_TO_BOARD_INTERVAL=200
@@ -65,104 +143,76 @@ build_flags =
   -D STORE_SNAPSHOT_INTERVAL=5000
 
 ;-------------------------------------------------------
-[env:esp32dev.release]
+
+[env:WioTerminal_SPI]
+build_flags=
+  -D SOFT_SPI_MOSI_PIN=13 # Blue
+  -D SOFT_SPI_MISO_PIN=12 # Orange
+  -D SOFT_SPI_SCK_PIN=15  # Yellow
+  -D NRF_CE=17
+  -D NRF_CS=2
+  -D SPI_MODE=0
+  -D SOFTSPI
+
+[env:WioTerminal_CORES]
+build_flags=
+  -D DISPLAY_TASK_CORE=1
+  -D COMMS_TASK_CORE=1
+  -D BATTERY_TASK_CORE=1
+  -D HUD_TASK_CORE=1
+#------------------------------------------------
+
+[env:WioTerminal.debug]
 src_filter = ${dir.main}
 
+lib_deps =
+  https://github.com/Seeed-Studio/Seeed_Arduino_LCD.git
+
 build_flags = 
-
   ${env.build_flags}
+  ${env:WioTerminal_SPI.build_flags}
+  ${env:WioTerminal_CORES.build_flags}
 
-  -D RELEASE_BUILD
-  ; -D DEBUG_SERIAL
-  ; -D PRINT_COMMS_STATE
-  ; -D PRINT_THROTTLE
-  ; -D PRINT_DISP_STATE_EVENT
-  -D FEATURE_CRUISE_CONTROL
+  -D DEBUG_BUILD=1
+  -D DEBUG_SERIAL
+  -D PRINT_COMMS_STATE=1
+  ; -D PRINT_COMMS_STATE_EVENT=1
+  ; -D PRINT_THROTTLE=1
+  ; -D PRINT_BUTTON_EVENTS=1
+  -D PRINT_RESET_DETECTION=1
+  -D PRINT_DISP_STATE=1
+  -D PRINT_DISP_STATE_EVENT=1
+  ; -D PRINT_IF_TOTAL_FAILED_SENDING=1
+  ; -D PRINT_TX_TO_BOARD=1
+  ; -D PRINT_RX_FROM_BOARD=1
+  ; -D PRINT_TX_TO_HUD=1
+  ; -D PRINT_RX_FROM_HUD=1
+  ; -D PRINT_HUD_TASKS_QUEUE_SEND=1
+  ; -D PRINT_HUD_TASKS_QUEUE_READ=1
+  ; -D PRINT_HUD_ACTION_QUEUE_SEND=1
+  ; -D PRINT_HUD_ACTION_QUEUE_READ=1
+  
+  -D FEATURE_CRUISE_CONTROL=true
   -D FEATURE_PUSH_TO_START=true
-  -D SEND_TO_BOARD_INTERVAL=200
+  -D SEND_TO_BOARD_INTERVAL=500
+  -D LONGCLICK_MS=1000
   -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=3
+  -D IGNORE_IF_HUD_OFFLINE=1
   ; how often we store moving time data in memory
   -D STORE_SNAPSHOT_INTERVAL=5000
+  -D SUPPRESS_EV_COMMS_PKT_RXD=1
+#------------------------------------------------
 
-;-------------------------------------------------------
-[env:esp32dev.nrf_tft_spi_sharing]
-
-src_filter = ${dir.nrf_tft_spi_sharing}
-
-build_flags = 
-
-lib_deps = 
-  https://github.com/pfeerick/elapsedMillis.git
-  
-  https://github.com/skelstar/Esk8.Board.VescComms.git
-  https://github.com/skelstar/Arduino-Debugging.git
-
-  https://github.com/greiman/DigitalIO.git
-  https://github.com/nRF24/RF24Network.git
-  https://github.com/skelstar/NRF24L01.Library.git#feature/adding-test
-  https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
-;-------------------------------------------------------
-
-[env:esp32dev.rtos_play]
-
-src_filter = ${dir.rtos_play}
+[env:Button2.example]
+src_filter = ${dir.button2}
+platform=${env:ESP32_Common.platform}
+board=${env:ESP32_Common.board}
 
 build_flags = 
-  ; -D USE_DEADMAN
-
-lib_deps = 
-  https://github.com/pfeerick/elapsedMillis.git
-
-;-------------------------------------------------------
-[env:esp32dev.haptic_test]
-
-
-src_filter = ${dir.haptic_test}
-
-build_flags = 
-
-lib_deps = 
-  https://github.com/pfeerick/elapsedMillis.git
-  https://github.com/skelstar/Arduino-Debugging.git
-
-;-------------------------------------------------------
-[env:comms_ping]
-
-src_filter = ${dir.comms_ping}
-
-build_flags = 
-  -D USE_SPI2
-
-lib_deps = 
-  https://github.com/lewisxhe/Button2.git
-  https://github.com/pfeerick/elapsedMillis.git
-  https://github.com/MattFryer/Smoothed.git
-
-  https://github.com/skelstar/VESC_Comms.git
-  https://github.com/skelstar/Esk8.Board.Data.git
-  https://github.com/skelstar/Arduino-Debugging.git
-
-  https://github.com/greiman/DigitalIO.git
-  https://github.com/nRF24/RF24Network.git
-  https://github.com/skelstar/NRF24L01.Library.git#feature/adding-test
-  https://github.com/skelstar/arduino-fsm.git 
-
-
-;-------------------------------------------------------
-[env:fonts_demo]
-
-src_filter = ${dir.fonts_demo}
-
-build_flags = 
-
-lib_deps = 
-  https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
+  -D DEBUG_SERIAL
 
 ;-------------------------------------------------------
 
 [dir]
 main = +<main/>
-rtos_play = +<rtos_play/>
-nrf_tft_spi_sharing = +<nrf_tft_spi_sharing/> 
-comms_ping = +<comms_ping/>
-fonts_demo = +<fonts_demo/>
+button2 = +<button2/>
