Fixed TFT reference for Release.

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 [platformio]
-; default_envs = esp32dev.debug
-default_envs = esp32dev.release
+default_envs = esp32dev.debug
+; default_envs = esp32dev.release
 # default_envs = WioTerminal.debug
 ; default_envs = Button2.example
 #------------------------------------------------
@@ -32,6 +32,7 @@ lib_deps =
   https://github.com/skelstar/arduino-fsm.git#v2.3
   https://github.com/skelstar/NRF24L01.Library.git#v1.1
   https://github.com/skelstar/Esk8-Shared.git#v1.1
+  https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
 
 #------------------------------------------------
 
@@ -40,9 +41,6 @@ platform = espressif32
 board = nodemcu-32s
 
 monitor_filters = time, esp32_exception_decoder
-
-lib_deps = 
-  https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
 
 build_flags =
   -D IS_ESP32
