--- a/platformio.ini
+++ b/platformio.ini
@@ -87,7 +87,7 @@ build_flags =
   ; -D PRINT_COMMS_STATE=1
   ; -D PRINT_COMMS_STATE_EVENT=1
   -D PRINT_THROTTLE=1
-  ; -D PRINT_BUTTON_EVENTS=1
+  -D PRINT_BUTTON_EVENTS=1
   -D PRINT_RESET_DETECTION=1
   ; -D PRINT_DISP_STATE=1
   ; -D PRINT_DISP_STATE_EVENT=1
@@ -108,6 +108,7 @@ build_flags =
   
   -D FEATURE_CRUISE_CONTROL=true
   -D FEATURE_PUSH_TO_START=true
+  -D FEATURE_START_MOVING_BOOST=true
   ; -D FEATURE_SEND_TO_HUD=1
   -D SEND_TO_BOARD_INTERVAL=200
   -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=3
