Sorted out display states and comms states.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,6 +71,5 @@
     "ciso646": "cpp",
     "climits": "cpp"
   },
-  "peacock.color": "#ff3d00",
-  "editor.formatOnSaveMode": "modifications"
+  "peacock.color": "#ff3d00"
 }
