--- a/platformio.ini
+++ b/platformio.ini
@@ -84,13 +84,14 @@ build_flags =
 
   -D DEBUG_BUILD=1
   -D DEBUG_SERIAL
-  ; -D PRINT_COMMS_STATE=1
-  ; -D PRINT_COMMS_STATE_EVENT=1
-  -D PRINT_THROTTLE=1
+  -D PRINT_COMMS_STATE=1
+  -D PRINT_COMMS_STATE_EVENT=1
+  ; -D PRINT_NRF24L01_DETAILS=1
+  ; -D PRINT_THROTTLE=1
   -D PRINT_BUTTON_EVENTS=1
   -D PRINT_RESET_DETECTION=1
-  ; -D PRINT_DISP_STATE=1
-  ; -D PRINT_DISP_STATE_EVENT=1
+  -D PRINT_DISP_STATE=1
+  -D PRINT_DISP_STATE_EVENT=1
   ; -D PRINT_IF_TOTAL_FAILED_SENDING=1
   ; -D PRINT_TX_TO_BOARD=1
   ; -D PRINT_RX_FROM_BOARD=1
