--- a/platformio.ini
+++ b/platformio.ini
@@ -64,6 +64,7 @@ build_flags =
   -D DISPLAY_TASK_CORE=0
   -D COMMS_TASK_CORE=0
   -D BATTERY_TASK_CORE=0
+  -D STATS_TASK_CORE=0
   -D HUD_TASK_CORE=1
 
 ;-------------------------------------------------------
@@ -90,9 +91,11 @@ build_flags =
   ; -D PRINT_THROTTLE=1
   -D PRINT_BUTTON_EVENTS=1
   -D PRINT_RESET_DETECTION=1
+
   -D PRINT_DISP_STATE=1
   -D PRINT_DISP_STATE_EVENT=1
   ; -D PRINT_DISP_QUEUE_READ=1
+  
   ; -D PRINT_IF_TOTAL_FAILED_SENDING=1
   ; -D PRINT_TX_TO_BOARD=1
   ; -D PRINT_RX_FROM_BOARD=1
@@ -102,11 +105,15 @@ build_flags =
 
 ; HUD stuff
   ; -D PRINT_RX_FROM_HUD=1
-  -D PRINT_TX_TO_HUD=1
+  ; -D PRINT_TX_TO_HUD=1
   ; -D PRINT_HUD_TASKS_QUEUE_SEND=1
-  -D PRINT_HUD_TASKS_QUEUE_READ=1
+  ; -D PRINT_HUD_TASKS_QUEUE_READ=1
   ; -D PRINT_HUD_ACTION_QUEUE_SEND=1
   ; -D PRINT_HUD_ACTION_QUEUE_READ=1
+  
+  -D PRINT_STATS_QUEUE_SEND=1
+  -D PRINT_STATS_QUEUE_READ=1
+
   
   -D FEATURE_CRUISE_CONTROL=true
   -D FEATURE_PUSH_TO_START=true
