--- a/platformio.ini
+++ b/platformio.ini
@@ -16,8 +16,8 @@ test_port = $upload_port
 test_filter = test_smoother
 
 build_flags =
-  -D VERSION=3.0
-  -D VERSION_BOARD_COMPAT=3.0
+  -D VERSION=3.1
+  -D VERSION_BOARD_COMPAT=3.1
   !python ./getCurrentGitBranch.py ; GIT_BRANCH_NAME
 
 lib_deps = 
@@ -92,7 +92,7 @@ build_flags =
   -D PRINT_RESET_DETECTION=1
 
   -D PRINT_DISP_STATE=1
-  ; -D PRINT_DISP_STATE_EVENT=1
+  -D PRINT_DISP_STATE_EVENT=1
   ; -D PRINT_DISP_QUEUE_READ=1
   
   ; -D PRINT_IF_TOTAL_FAILED_SENDING=1
