Sorted out Comms connected/disconnected. Moved queue to task.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,7 +69,8 @@
     "cerrno": "cpp",
     "cfloat": "cpp",
     "ciso646": "cpp",
-    "climits": "cpp"
+    "climits": "cpp",
+    "queue": "cpp"
   },
   "peacock.color": "#ff3d00"
 }
