--- a/platformio.ini
+++ b/platformio.ini
@@ -85,14 +85,16 @@ build_flags =
   -D DEBUG_BUILD=1
   -D DEBUG_SERIAL
   -D PRINT_COMMS_STATE=1
-  ; -D PRINT_COMMS_STATE_EVENT=1
+  -D PRINT_COMMS_STATE_EVENT=1
+  ; -D PRINT_COMMS_QUEUE_SENT=1
+  ; -D PRINT_COMMS_QUEUE_READ=1
   ; -D PRINT_NRF24L01_DETAILS=1
   ; -D PRINT_THROTTLE=1
   -D PRINT_BUTTON_EVENTS=1
   -D PRINT_RESET_DETECTION=1
 
-  -D PRINT_DISP_STATE=1
-  -D PRINT_DISP_STATE_EVENT=1
+  ; -D PRINT_DISP_STATE=1
+  ; -D PRINT_DISP_STATE_EVENT=1
   ; -D PRINT_DISP_QUEUE_READ=1
   
   ; -D PRINT_IF_TOTAL_FAILED_SENDING=1
@@ -104,6 +106,7 @@ build_flags =
   ; -D PRINT_STATS_QUEUE_SEND=1
   ; -D PRINT_STATS_QUEUE_READ=1
 
+
   
   -D FEATURE_CRUISE_CONTROL=true
   -D FEATURE_PUSH_TO_START=true
@@ -114,7 +117,7 @@ build_flags =
   -D STORE_SNAPSHOT_INTERVAL=5000
   -D SUPPRESS_EV_COMMS_PKT_RXD=1
 
-  -D COMMS_M5ATOM=03
+  ; -D COMMS_M5ATOM=03
 
 ;-------------------------------------------------------
 [env:esp32dev.release]
