--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 [platformio]
-default_envs = esp32dev.debug
-; default_envs = esp32dev.release
+; default_envs = esp32dev.debug
+default_envs = esp32dev.release
 # default_envs = WioTerminal.debug
 ; default_envs = Button2.example
 #------------------------------------------------
@@ -84,10 +84,12 @@ build_flags =
 
   -D DEBUG_BUILD=1
   -D DEBUG_SERIAL
+  
   -D PRINT_COMMS_STATE=1
-  -D PRINT_COMMS_STATE_EVENT=1
+  ; -D PRINT_COMMS_STATE_EVENT=1
   ; -D PRINT_COMMS_QUEUE_SENT=1
   ; -D PRINT_COMMS_QUEUE_READ=1
+
   ; -D PRINT_NRF24L01_DETAILS=1
   ; -D PRINT_THROTTLE=1
   -D PRINT_BUTTON_EVENTS=1
@@ -105,8 +107,6 @@ build_flags =
 
   ; -D PRINT_STATS_QUEUE_SEND=1
   ; -D PRINT_STATS_QUEUE_READ=1
-
-
   
   -D FEATURE_CRUISE_CONTROL=true
   -D FEATURE_PUSH_TO_START=true
@@ -125,6 +125,8 @@ src_filter = ${dir.main}
 
 platform=${env:ESP32_Common.platform}
 board=${env:ESP32_Common.board}
+monitor_filters=${env:ESP32_Common.monitor_filters}
+
 build_flags = 
 
   ${env.build_flags}
@@ -133,7 +135,7 @@ build_flags =
   ${env:ESP32_Common.build_flags}
 
   -D RELEASE_BUILD=1
-  ; -D DEBUG_SERIAL
+  -D DEBUG_SERIAL
   -D FEATURE_CRUISE_CONTROL=true
   -D FEATURE_PUSH_TO_START=true
   -D SEND_TO_BOARD_INTERVAL=200
