--- a/platformio.ini
+++ b/platformio.ini
@@ -107,6 +107,9 @@ build_flags =
 
   ; -D PRINT_STATS_QUEUE_SEND=1
   ; -D PRINT_STATS_QUEUE_READ=1
+
+  -D PRINT_STATS_MUTEX_TAKE_STATE=1
+  ; -D PRINT_STATS_MUTEX_GIVE_STATE=1
   
   -D FEATURE_CRUISE_CONTROL=true
   -D FEATURE_PUSH_TO_START=true
