Display states more ignorant (#40)
* Fixed TFT reference for Release.

* Added FEATURE_START_MOVING_BOOST

* Sorted out display states and comms states.

* displayQueue print read callback

* Stopped working with Ack Resets

* Ack resets screens for stopped and moving working.

* Created StatsTask, storing/reading from memory done in task, responding to stopped/moving events.

* Got boardResets and controllerResets wokring. Removed some more HUD stuff.

* Version not matching screen/state fix

* - added state START_UP
- removed UNINTENDED_RESET
- more about STOPPED/MOVING rather than CONNECTED

* Sorted out Comms connected/disconnected. Moved queue to task.

* Changed the criteria for "valueChanged"

* Mutexes for Stats and Bloard class. rtosManager.h.

Works in PROD, but still resetting for some reason.

* Board mutex stuff

* Remote battery

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,8 +69,9 @@
     "cerrno": "cpp",
     "cfloat": "cpp",
     "ciso646": "cpp",
-    "climits": "cpp"
+    "climits": "cpp",
+    "queue": "cpp"
   },
   "peacock.color": "#ff3d00",
-  "editor.formatOnSaveMode": "modifications"
+  "workbench.editor.enablePreviewFromQuickOpen": true
 }
