OPTION_USING_DISPLAY

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,8 @@ default_envs = esp32dev.debug
 [env]
 framework = arduino
 
-upload_port = COM6
-monitor_port = COM6
+upload_port = COM9
+monitor_port = COM9
 monitor_speed = 115200
 test_port = $upload_port
 
@@ -36,6 +36,16 @@ lib_deps =
 
 #------------------------------------------------
 
+#------------------------------------------------
+
+[env:BOARD_RED_REMOTE]
+build_flags =
+  -D OPTION_USING_DISPLAY=1
+
+[env:BOARD_NINTENDO_REMOTE]
+build_flags =
+  -D OPTION_USING_DISPLAY=0
+
 [env:ESP32_Common]
 platform = espressif32
 board = nodemcu-32s
@@ -43,12 +53,11 @@ board = nodemcu-32s
 monitor_filters = time, esp32_exception_decoder
 
 build_flags =
+  ${env:BOARD_NINTENDO_REMOTE.build_flags}
   -D IS_ESP32
   -D LONGCLICK_MS=1000
   -D DISP_SOFTWARE_STATS_TIME=1500
   -D DISP_BOARD_BATTERY_TIME=800
-
-#------------------------------------------------
 
 [env:ESP32_SPI]
 build_flags = 
