Configure throttle in config

--- a/platformio.ini
+++ b/platformio.ini
@@ -41,10 +41,13 @@ lib_deps =
 [env:BOARD_RED_REMOTE]
 build_flags =
   -D OPTION_USING_DISPLAY=1
+  -D THROTTLE_PIN=27
+  -D PRIMARY_BUTTON_PIN=21
 
 [env:BOARD_NINTENDO_REMOTE]
 build_flags =
   -D OPTION_USING_DISPLAY=0
+  -D THROTTLE_PIN=36
 
 [env:ESP32_Common]
 platform = espressif32
