Wrote state machine for dial state

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,15 +1,19 @@
 [platformio]
-default_envs = esp32dev.debug
+; default_envs = esp32dev.debug
 ; default_envs = esp32dev.release
 # default_envs = WioTerminal.debug
 ; default_envs = Button2.example
+; default_envs = throttle_mapper
+default_envs = mag_encoder
 #------------------------------------------------
 
 [env]
 framework = arduino
 
-upload_port = COM9
-monitor_port = COM9
+; upload_port = COM9
+; monitor_port = COM9
+upload_port = COM25
+monitor_port = COM25
 monitor_speed = 115200
 test_port = $upload_port
 
@@ -43,11 +47,19 @@ build_flags =
   -D OPTION_USING_DISPLAY=1
   -D THROTTLE_PIN=27
   -D PRIMARY_BUTTON_PIN=21
+  -D THROTTLE_RAW_MAX=2530
+  -D THROTTLE_RAW_CENTRE=1280
+  -D THROTTLE_RAW_MIN=0
+  -D THROTTLE_RAW_DEADBAND=50
 
 [env:BOARD_NINTENDO_REMOTE]
 build_flags =
   -D OPTION_USING_DISPLAY=0
   -D THROTTLE_PIN=36
+  -D THROTTLE_RAW_MAX=4095
+  -D THROTTLE_RAW_CENTRE=1600
+  -D THROTTLE_RAW_MIN=0
+  -D THROTTLE_RAW_DEADBAND=400
 
 [env:ESP32_Common]
 platform = espressif32
@@ -103,7 +115,7 @@ build_flags =
   ; -D PRINT_COMMS_QUEUE_READ=1
 
   ; -D PRINT_NRF24L01_DETAILS=1
-  ; -D PRINT_THROTTLE=1
+  -D PRINT_THROTTLE=1
   -D PRINT_BUTTON_EVENTS=1
   -D PRINT_RESET_DETECTION=1
 
@@ -218,9 +230,37 @@ board=${env:ESP32_Common.board}
 
 build_flags = 
   -D DEBUG_SERIAL
+#------------------------------------------------
+
+[env:throttle_mapper]
+src_filter = ${dir.throttle_mapper}
+platform=${env:ESP32_Common.platform}
+board=${env:ESP32_Common.board}
+
+build_flags = 
+  ${env:BOARD_NINTENDO_REMOTE.build_flags}
+  -D DEBUG_SERIAL
+  -D PRINT_THROTTLE=0
+#------------------------------------------------
+
+[env:mag_encoder]
+src_filter = ${dir.mag_encoder}
+platform=${env:ESP32_Common.platform}
+board=${env:ESP32_Common.board}
+monitor_filters=${env:ESP32_Common.monitor_filters}
+
+lib_deps = 
+  https://github.com/Seeed-Studio/Seeed_Arduino_AS5600.git
+
+build_flags = 
+  ${env:BOARD_NINTENDO_REMOTE.build_flags}
+  -D DEBUG_SERIAL
+  -D PRINT_THROTTLE=0
 
 ;-------------------------------------------------------
 
 [dir]
 main = +<main/>
 button2 = +<button2/>
+throttle_mapper = +<throttle_mapper/>
+mag_encoder = +<mag_encoder/>
