Tests are working.

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,9 +15,9 @@ framework = arduino
 upload_port = COM25
 monitor_port = COM25
 monitor_speed = 115200
-test_port = $upload_port
+test_port = COM25
 
-test_filter = test_smoother
+; test_filter = test_smoother
 
 build_flags =
   -D VERSION=3.1
@@ -248,6 +248,8 @@ src_filter = ${dir.mag_encoder}
 platform=${env:ESP32_Common.platform}
 board=${env:ESP32_Common.board}
 monitor_filters=${env:ESP32_Common.monitor_filters}
+
+test_filter = mag_encoder
 
 lib_deps = 
   https://github.com/Seeed-Studio/Seeed_Arduino_AS5600.git
