--- a/platformio.ini
+++ b/platformio.ini
@@ -10,10 +10,10 @@ default_envs = mag_encoder
 [env]
 framework = arduino
 
-; upload_port = COM9
-; monitor_port = COM9
-upload_port = COM25
-monitor_port = COM25
+upload_port = COM9
+monitor_port = COM9
+; upload_port = COM25
+; monitor_port = COM25
 monitor_speed = 115200
 test_port = COM25
 
@@ -38,6 +38,7 @@ lib_deps =
   https://github.com/skelstar/Esk8-Shared.git#v1.1
   https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
 
+  https://github.com/madhephaestus/WiiChuck.git
 #------------------------------------------------
 
 #------------------------------------------------
@@ -55,11 +56,11 @@ build_flags =
 [env:BOARD_NINTENDO_REMOTE]
 build_flags =
   -D OPTION_USING_DISPLAY=0
-  -D THROTTLE_PIN=36
-  -D THROTTLE_RAW_MAX=4095
-  -D THROTTLE_RAW_CENTRE=1600
-  -D THROTTLE_RAW_MIN=0
-  -D THROTTLE_RAW_DEADBAND=400
+  ; -D THROTTLE_PIN=36
+  ; -D THROTTLE_RAW_MAX=4095
+  ; -D THROTTLE_RAW_CENTRE=1600
+  ; -D THROTTLE_RAW_MIN=0
+  ; -D THROTTLE_RAW_DEADBAND=400
 
 [env:ESP32_Common]
 platform = espressif32
@@ -78,6 +79,15 @@ build_flags =
 build_flags = 
   -D SOFT_SPI_MOSI_PIN=13 # Blue
   -D SOFT_SPI_MISO_PIN=12 # Orange
+  -D SOFT_SPI_SCK_PIN=15  # Yellow
+  -D NRF_CE=17
+  -D NRF_CS=2
+  -D SOFTSPI
+
+[env:NINTENDO_SPI]
+build_flags = 
+  -D SOFT_SPI_MOSI_PIN=13 # Blue
+  -D SOFT_SPI_MISO_PIN=25 # Orange
   -D SOFT_SPI_SCK_PIN=15  # Yellow
   -D NRF_CE=17
   -D NRF_CS=2
@@ -102,7 +112,7 @@ monitor_filters=${env:ESP32_Common.monitor_filters}
 build_flags = 
 
   ${env.build_flags}
-  ${env:ESP32_SPI.build_flags}
+  ${env:NINTENDO_SPI.build_flags}
   ${env:ESP32_CORES.build_flags}
   ${env:ESP32_Common.build_flags}
 
@@ -157,7 +167,7 @@ monitor_filters=${env:ESP32_Common.monitor_filters}
 build_flags = 
 
   ${env.build_flags}
-  ${env:ESP32_SPI.build_flags}
+  ${env:NINTENDO_SPI.build_flags}
   ${env:ESP32_CORES.build_flags}
   ${env:ESP32_Common.build_flags}
 
@@ -253,11 +263,13 @@ test_filter = mag_encoder
 
 lib_deps = 
   https://github.com/Seeed-Studio/Seeed_Arduino_AS5600.git
+  https://github.com/sparkfun/SparkFun_Qwiic_Button_Arduino_Library.git
 
 build_flags = 
   ${env:BOARD_NINTENDO_REMOTE.build_flags}
   -D DEBUG_SERIAL
   -D PRINT_THROTTLE=0
+  -D PRINT_ZONE_CHANGE=0
 
 ;-------------------------------------------------------
 
