Pressed and released (NintendoController lib)

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,8 +10,10 @@ default_envs = mag_encoder
 [env]
 framework = arduino
 
-upload_port = COM9
-monitor_port = COM9
+upload_port = COM7
+monitor_port = COM7
+; upload_port = COM9
+; monitor_port = COM9
 ; upload_port = COM25
 ; monitor_port = COM25
 monitor_speed = 115200
@@ -257,7 +259,7 @@ build_flags =
 src_filter = ${dir.mag_encoder}
 platform=${env:ESP32_Common.platform}
 board=${env:ESP32_Common.board}
-monitor_filters=${env:ESP32_Common.monitor_filters}
+; monitor_filters=${env:ESP32_Common.monitor_filters}
 
 test_filter = mag_encoder
 
