Classic callbacks, throttle enabled query and Qwiic button

--- a/platformio.ini
+++ b/platformio.ini
@@ -270,8 +270,9 @@ lib_deps =
 build_flags = 
   ${env:BOARD_NINTENDO_REMOTE.build_flags}
   -D DEBUG_SERIAL
-  -D PRINT_THROTTLE=0
-  -D PRINT_ZONE_CHANGE=0
+  -D PRINT_THROTTLE=1
+  -D SWEEP_ANGLE=30.0
+  -D LIMIT_DELTA=50.0
 
 ;-------------------------------------------------------
 
