--- a/platformio.ini
+++ b/platformio.ini
@@ -1,10 +1,10 @@
 [platformio]
-; default_envs = esp32dev.debug
+default_envs = esp32dev.debug
 ; default_envs = esp32dev.release
 # default_envs = WioTerminal.debug
 ; default_envs = Button2.example
 ; default_envs = throttle_mapper
-default_envs = mag_encoder
+; default_envs = mag_encoder
 #------------------------------------------------
 
 [env]
@@ -40,7 +40,9 @@ lib_deps =
   https://github.com/skelstar/Esk8-Shared.git#v1.1
   https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
 
-  https://github.com/madhephaestus/WiiChuck.git
+  https://github.com/Seeed-Studio/Seeed_Arduino_AS5600.git
+  https://github.com/sparkfun/SparkFun_Qwiic_Button_Arduino_Library.git
+
 #------------------------------------------------
 
 #------------------------------------------------
@@ -58,11 +60,12 @@ build_flags =
 [env:BOARD_NINTENDO_REMOTE]
 build_flags =
   -D OPTION_USING_DISPLAY=0
-  ; -D THROTTLE_PIN=36
-  ; -D THROTTLE_RAW_MAX=4095
-  ; -D THROTTLE_RAW_CENTRE=1600
-  ; -D THROTTLE_RAW_MIN=0
-  ; -D THROTTLE_RAW_DEADBAND=400
+  -D OPTION_USING_MAG_THROTTLE=1
+  -D SWEEP_ANGLE=30.0
+  -D LIMIT_DELTA=50.0
+  -D DIR_CLOCKWISE=0
+  -D DIR_ANIT_CLOCKWISE=1
+  -D THROTTLE_DIRECTION=DIR_CLOCKWISE
 
 [env:ESP32_Common]
 platform = espressif32
@@ -126,7 +129,7 @@ build_flags =
   ; -D PRINT_COMMS_QUEUE_SENT=1
   ; -D PRINT_COMMS_QUEUE_READ=1
 
-  ; -D PRINT_NRF24L01_DETAILS=1
+  -D PRINT_NRF24L01_DETAILS=1
   -D PRINT_THROTTLE=1
   -D PRINT_BUTTON_EVENTS=1
   -D PRINT_RESET_DETECTION=1
