--- a/platformio.ini
+++ b/platformio.ini
@@ -37,7 +37,7 @@ lib_deps =
   
   https://github.com/skelstar/arduino-fsm.git#v2.3
   https://github.com/skelstar/NRF24L01.Library.git#v1.1
-  https://github.com/skelstar/Esk8-Shared.git#v1.1
+  https://github.com/skelstar/Esk8-Shared.git#rtos-queue-subscribe ; v1.1
   https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
 
   https://github.com/Seeed-Studio/Seeed_Arduino_AS5600.git
@@ -125,12 +125,12 @@ build_flags =
   -D DEBUG_SERIAL
   
   -D PRINT_COMMS_STATE=1
-  ; -D PRINT_COMMS_STATE_EVENT=1
+  -D PRINT_COMMS_STATE_EVENT=1
   ; -D PRINT_COMMS_QUEUE_SENT=1
-  ; -D PRINT_COMMS_QUEUE_READ=1
+  ; -D PRINT_COMMS_QUEUE_READ=1L
 
   -D PRINT_NRF24L01_DETAILS=1
-  -D PRINT_THROTTLE=1
+  ; -D PRINT_THROTTLE=1
   -D PRINT_BUTTON_EVENTS=1
   -D PRINT_RESET_DETECTION=1
 
