--- a/platformio.ini
+++ b/platformio.ini
@@ -34,7 +34,8 @@ lib_deps =
   https://github.com/nRF24/RF24.git
   https://github.com/nRF24/RF24Network.git
   https://github.com/RobTillaart/FastMap.git
-  
+  https://github.com/FastLED/FastLED.git
+
   https://github.com/skelstar/arduino-fsm.git#v2.3
   https://github.com/skelstar/NRF24L01.Library.git#v1.1
   https://github.com/skelstar/Esk8-Shared.git#rtos-queue-subscribe ; v1.1
@@ -104,6 +105,7 @@ build_flags =
   -D COMMS_TASK_CORE=0
   -D BATTERY_TASK_CORE=0
   -D STATS_TASK_CORE=0
+  -D LED_TASK_CORE=0
 
 ;-------------------------------------------------------
 
@@ -149,7 +151,8 @@ build_flags =
 
   -D PRINT_STATS_MUTEX_TAKE_STATE=1
   ; -D PRINT_STATS_MUTEX_GIVE_STATE=1
-  
+  -D FEATURE_LED_COUNT=4 ; number of LEDs (0 when commented out)
+
   -D FEATURE_CRUISE_CONTROL=true
   -D FEATURE_PUSH_TO_START=true
   -D FEATURE_START_MOVING_BOOST=true
