Added Perihperals task. Primary button mostly first.

--- a/platformio.ini
+++ b/platformio.ini
@@ -106,6 +106,7 @@ build_flags =
   -D BATTERY_TASK_CORE=0
   -D STATS_TASK_CORE=0
   -D LED_TASK_CORE=0
+  -D PERIPHERALS_TASK_CORE=0
 
 ;-------------------------------------------------------
 
