Got display working. CommsState working too

--- a/platformio.ini
+++ b/platformio.ini
@@ -60,7 +60,7 @@ build_flags =
 
 [env:BOARD_NINTENDO_REMOTE]
 build_flags =
-  -D OPTION_USING_DISPLAY=0
+  -D OPTION_USING_DISPLAY=1
   -D OPTION_USING_MAG_THROTTLE=1
   -D SWEEP_ANGLE=30.0
   -D LIMIT_DELTA=50.0
@@ -137,9 +137,8 @@ build_flags =
   -D PRINT_BUTTON_EVENTS=1
   -D PRINT_RESET_DETECTION=1
 
-  ; -D PRINT_DISP_STATE=1
-  ; -D PRINT_DISP_STATE_EVENT=1
-  ; -D PRINT_DISP_QUEUE_READ=1
+  -D PRINT_DISP_STATE=1
+  -D PRINT_DISP_STATE_EVENT=1
   
   ; -D PRINT_IF_TOTAL_FAILED_SENDING=1
   ; -D PRINT_TX_TO_BOARD=1
