--- a/platformio.ini
+++ b/platformio.ini
@@ -63,7 +63,8 @@ build_flags =
   -D OPTION_USING_DISPLAY=1
   -D OPTION_USING_MAG_THROTTLE=1
   -D SWEEP_ANGLE=30.0
-  -D LIMIT_DELTA=50.0
+  -D LIMIT_DELTA_MAX=50.0
+  -D LIMIT_DELTA_MIN=0.5
   -D DIR_CLOCKWISE=0
   -D DIR_ANIT_CLOCKWISE=1
   -D THROTTLE_DIRECTION=DIR_CLOCKWISE
@@ -278,7 +279,8 @@ build_flags =
   -D DEBUG_SERIAL
   -D PRINT_THROTTLE=1
   -D SWEEP_ANGLE=30.0
-  -D LIMIT_DELTA=50.0
+  -D LIMIT_DELTA_MAX=50.0
+  -D LIMIT_DELTA_MIN=50.0
 
 ;-------------------------------------------------------
 
