mutex_SPI seems to be working. Need to update GenericClient library.

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,10 @@ framework = arduino
 
 ; upload_port = COM7
 ; monitor_port = COM7
-upload_port = COM9
-monitor_port = COM9
+; upload_port = COM9
+; monitor_port = COM9
+upload_port = COM10
+; monitor_port = COM10
 ; upload_port = COM25
 ; monitor_port = COM25
 monitor_speed = 115200
@@ -130,8 +132,6 @@ build_flags =
   
   -D PRINT_COMMS_STATE=1
   -D PRINT_COMMS_STATE_EVENT=1
-  ; -D PRINT_COMMS_QUEUE_SENT=1
-  ; -D PRINT_COMMS_QUEUE_READ=1L
 
   -D PRINT_NRF24L01_DETAILS=1
   ; -D PRINT_THROTTLE=1
@@ -146,9 +146,6 @@ build_flags =
   ; -D PRINT_RX_FROM_BOARD=1
 
   ; -D PRINT_BOARD_CLIENT_CONNECTED_CHANGED=1
-
-  ; -D PRINT_STATS_QUEUE_SEND=1
-  ; -D PRINT_STATS_QUEUE_READ=1
 
   -D PRINT_STATS_MUTEX_TAKE_STATE=1
   ; -D PRINT_STATS_MUTEX_GIVE_STATE=1
