--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@ framework = arduino
 ; upload_port = COM9
 ; monitor_port = COM9
 upload_port = COM10
-; monitor_port = COM10
+monitor_port = COM10
 ; upload_port = COM25
 ; monitor_port = COM25
 monitor_speed = 115200
@@ -39,7 +39,7 @@ lib_deps =
   https://github.com/FastLED/FastLED.git
 
   https://github.com/skelstar/arduino-fsm.git#v2.3
-  https://github.com/skelstar/NRF24L01.Library.git#v1.1
+  https://github.com/skelstar/NRF24L01.Library.git#introducing-mutex-to-update-etc
   https://github.com/skelstar/Esk8-Shared.git#rtos-queue-subscribe ; v1.1
   https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
 
@@ -106,9 +106,9 @@ build_flags =
 build_flags =
   -D DISPLAY_TASK_CORE=0
   -D COMMS_TASK_CORE=0
-  -D BATTERY_TASK_CORE=0
-  -D STATS_TASK_CORE=0
-  -D LED_TASK_CORE=0
+  -D REMOTE_TASK_CORE=-1
+  -D STATS_TASK_CORE=-1
+  -D LED_TASK_CORE=-1
   -D PERIPHERALS_TASK_CORE=0
 
 ;-------------------------------------------------------
