Display enabled. Also using new GenericClient that is handling mutex.

--- a/platformio.ini
+++ b/platformio.ini
@@ -104,7 +104,7 @@ build_flags =
 
 [env:ESP32_CORES]
 build_flags =
-  -D DISPLAY_TASK_CORE=0
+  -D DISPLAY_TASK_CORE=0  ; normally 0
   -D COMMS_TASK_CORE=0
   -D REMOTE_TASK_CORE=-1
   -D STATS_TASK_CORE=-1
