--- a/platformio.ini
+++ b/platformio.ini
@@ -106,10 +106,18 @@ build_flags =
 build_flags =
   -D DISPLAY_TASK_CORE=0  ; normally 0
   -D COMMS_TASK_CORE=0
-  -D REMOTE_TASK_CORE=-1
-  -D STATS_TASK_CORE=-1
-  -D LED_TASK_CORE=-1
+  -D REMOTE_TASK_CORE=0
+  -D STATS_TASK_CORE=0
+  -D LED_TASK_CORE=0
   -D PERIPHERALS_TASK_CORE=0
+
+[env:USING_FEATURES]
+build_flags = 
+  -D USING_DISPLAY=1
+  -D USING_REMOTE=0
+  -D USING_STATS=0
+  -D USING_LED=0
+
 
 ;-------------------------------------------------------
 
@@ -126,6 +134,7 @@ build_flags =
   ${env:NINTENDO_SPI.build_flags}
   ${env:ESP32_CORES.build_flags}
   ${env:ESP32_Common.build_flags}
+  ${env:USING_FEATURES.build_flags}
 
   -D DEBUG_BUILD=1
   -D DEBUG_SERIAL
