Options screen working.

--- a/platformio.ini
+++ b/platformio.ini
@@ -156,6 +156,8 @@ build_flags =
 
   ; -D PRINT_BOARD_CLIENT_CONNECTED_CHANGED=1
 
+  -D PRINT_NINTENDO_BUTTON=0
+
   -D PRINT_STATS_MUTEX_TAKE_STATE=1
   ; -D PRINT_STATS_MUTEX_GIVE_STATE=1
   -D FEATURE_LED_COUNT=4 ; number of LEDs (0 when commented out)
