SparkFun Task sort of works

--- a/platformio.ini
+++ b/platformio.ini
@@ -111,6 +111,7 @@ build_flags =
   -D LED_TASK_CORE=0
   -D PERIPHERALS_TASK_CORE=0
   -D DEBUG_TASK_CORE=0
+  -D SPARKFUN_BUTTON_TASK_CORE=0
 
 [env:USING_FEATURES]
 build_flags = 
@@ -119,6 +120,7 @@ build_flags =
   -D USING_STATS=0
   -D USING_LED=0
   -D USING_DEBUG_TASK=1
+  -D USING_SPARKFUN_BUTTON_TASK=1
 
 ;-------------------------------------------------------
 
