Platformio changes for tasks unit test.

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,5 +1,6 @@
 [platformio]
-default_envs = esp32dev.debug
+default_envs = tasks_tests
+; default_envs = esp32dev.debug
 ; default_envs = esp32dev.release
 # default_envs = WioTerminal.debug
 ; default_envs = Button2.example
@@ -18,8 +19,8 @@ upload_port = COM10
 monitor_port = COM10
 ; upload_port = COM25
 ; monitor_port = COM25
+test_port = COM10
 monitor_speed = 115200
-test_port = COM25
 
 ; test_filter = test_smoother
 
@@ -121,6 +122,21 @@ build_flags =
   -D USING_LED=0
   -D USING_DEBUG_TASK=1
   -D USING_QWIIC_BUTTON_TASK=1
+
+#------------------------------------------------
+[env:tasks_tests]
+src_filter = ${dir.tasks}
+platform=${env:ESP32_Common.platform}
+board=${env:ESP32_Common.board}
+
+test_filter = tasks
+
+build_flags =
+  ${env.build_flags}
+  ${env:NINTENDO_SPI.build_flags}
+  ${env:ESP32_CORES.build_flags}
+  ${env:ESP32_Common.build_flags}
+  ${env:USING_FEATURES.build_flags}
 
 ;-------------------------------------------------------
 
@@ -300,3 +316,4 @@ main = +<main/>
 button2 = +<button2/>
 throttle_mapper = +<throttle_mapper/>
 mag_encoder = +<mag_encoder/>
+tasks = +<tasks/>
