- Reporting how long take for - DebugTask showing h/w mark/usage% - Ticks in ms

--- a/platformio.ini
+++ b/platformio.ini
@@ -175,6 +175,8 @@ build_flags =
 
   ; -D PRINT_BOARD_CLIENT_CONNECTED_CHANGED=1
 
+  -D PRINT_MUTEX_TAKE_FAIL=1
+
   -D PRINT_NINTENDO_BUTTON=0
 
   -D PRINT_STATS_MUTEX_TAKE_STATE=1
