--- a/platformio.ini
+++ b/platformio.ini
@@ -128,6 +128,7 @@ build_flags =
 src_filter = ${dir.tasks}
 platform=${env:ESP32_Common.platform}
 board=${env:ESP32_Common.board}
+monitor_filters=${env:ESP32_Common.monitor_filters}
 
 test_filter = tasks
 
