--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 [platformio]
-default_envs = tasks_tests
-; default_envs = esp32dev.debug
+; default_envs = tasks_tests
+default_envs = esp32dev.debug
 ; default_envs = esp32dev.release
 # default_envs = WioTerminal.debug
 ; default_envs = Button2.example
@@ -19,7 +19,7 @@ upload_port = COM10
 monitor_port = COM10
 ; upload_port = COM25
 ; monitor_port = COM25
-test_port = COM10
+; test_port = COM10
 monitor_speed = 115200
 
 ; test_filter = test_smoother
@@ -47,7 +47,6 @@ lib_deps =
   https://github.com/Seeed-Studio/Seeed_Arduino_AS5600.git
   https://github.com/sparkfun/SparkFun_Qwiic_Button_Arduino_Library.git
 
-#------------------------------------------------
 
 #------------------------------------------------
 
@@ -117,27 +116,12 @@ build_flags =
 [env:USING_FEATURES]
 build_flags = 
   -D USING_DISPLAY=1
-  -D USING_REMOTE=0
-  -D USING_STATS=0
-  -D USING_LED=0
-  -D USING_DEBUG_TASK=1
+  ; -D USING_REMOTE=1
+  ; -D USING_STATS=1
+  -D USING_NINTENDO_BUTTONS=1
+  ; -D USING_LED=1
+  ; -D USING_DEBUG_TASK=1
   -D USING_QWIIC_BUTTON_TASK=1
-
-#------------------------------------------------
-[env:tasks_tests]
-src_filter = ${dir.tasks}
-platform=${env:ESP32_Common.platform}
-board=${env:ESP32_Common.board}
-monitor_filters=${env:ESP32_Common.monitor_filters}
-
-test_filter = tasks
-
-build_flags =
-  ${env.build_flags}
-  ${env:NINTENDO_SPI.build_flags}
-  ${env:ESP32_CORES.build_flags}
-  ${env:ESP32_Common.build_flags}
-  ${env:USING_FEATURES.build_flags}
 
 ;-------------------------------------------------------
 
@@ -148,8 +132,10 @@ platform=${env:ESP32_Common.platform}
 board=${env:ESP32_Common.board}
 monitor_filters=${env:ESP32_Common.monitor_filters}
 
-build_flags = 
+lib_deps =
+  ${env.lib_deps}
 
+build_flags = 
   ${env.build_flags}
   ${env:NINTENDO_SPI.build_flags}
   ${env:ESP32_CORES.build_flags}
@@ -176,12 +162,10 @@ build_flags =
 
   ; -D PRINT_BOARD_CLIENT_CONNECTED_CHANGED=1
 
-  -D PRINT_MUTEX_TAKE_FAIL=1
+  ; -D PRINT_MUTEX_TAKE_FAIL=1
 
-  -D PRINT_NINTENDO_BUTTON=0
+  ; -D PRINT_NINTENDO_BUTTON=1
 
-  -D PRINT_STATS_MUTEX_TAKE_STATE=1
-  ; -D PRINT_STATS_MUTEX_GIVE_STATE=1
   -D FEATURE_LED_COUNT=4 ; number of LEDs (0 when commented out)
 
   -D FEATURE_CRUISE_CONTROL=true
@@ -313,6 +297,21 @@ build_flags =
   -D LIMIT_DELTA_MIN=50.0
 
 ;-------------------------------------------------------
+[env:tasks_tests]
+src_filter = ${dir.tasks}
+platform=${env:ESP32_Common.platform}
+board=${env:ESP32_Common.board}
+monitor_filters=${env:ESP32_Common.monitor_filters}
+
+test_filter = tasks
+
+build_flags =
+  ${env.build_flags}
+  ${env:NINTENDO_SPI.build_flags}
+  ${env:ESP32_CORES.build_flags}
+  ${env:ESP32_Common.build_flags}
+  ${env:USING_FEATURES.build_flags}
+#------------------------------------------------
 
 [dir]
 main = +<main/>
