Created ShortLivedTask (does nothing).

--- a/platformio.ini
+++ b/platformio.ini
@@ -120,7 +120,7 @@ build_flags =
   ; -D USING_STATS=1
   -D USING_NINTENDO_BUTTONS=1
   ; -D USING_LED=1
-  ; -D USING_DEBUG_TASK=1
+  -D USING_DEBUG_TASK=1
   -D USING_QWIIC_BUTTON_TASK=1
 
 ;-------------------------------------------------------
