--- a/platformio.ini
+++ b/platformio.ini
@@ -52,7 +52,7 @@ lib_deps =
 
 [env:BOARD_RED_REMOTE]
 build_flags =
-  -D OPTION_USING_DISPLAY=1
+  ; -D OPTION_USING_DISPLAY=1
   -D THROTTLE_PIN=27
   -D PRIMARY_BUTTON_PIN=21
   -D THROTTLE_RAW_MAX=2530
@@ -62,7 +62,7 @@ build_flags =
 
 [env:BOARD_NINTENDO_REMOTE]
 build_flags =
-  -D OPTION_USING_DISPLAY=1
+  ; -D OPTION_USING_DISPLAY=1
   -D OPTION_USING_MAG_THROTTLE=1
   -D SWEEP_ANGLE=30.0
   -D LIMIT_DELTA_MAX=50.0
