--- a/platformio.ini
+++ b/platformio.ini
@@ -116,7 +116,7 @@ build_flags =
 [env:USING_FEATURES]
 build_flags = 
   -D USING_DISPLAY=1
-  ; -D USING_REMOTE=1
+  -D USING_REMOTE=1
   ; -D USING_STATS=1
   -D USING_NINTENDO_BUTTONS=1
   ; -D USING_LED=1
