Got display _nearly_ working in tasks.cpp (unit test)

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 [platformio]
-; default_envs = tasks_tests
-default_envs = esp32dev.debug
+default_envs = tasks_tests
+; default_envs = esp32dev.debug
 ; default_envs = esp32dev.release
 # default_envs = WioTerminal.debug
 ; default_envs = Button2.example
@@ -19,7 +19,7 @@ upload_port = COM10
 monitor_port = COM10
 ; upload_port = COM25
 ; monitor_port = COM25
-; test_port = COM10
+test_port = COM10
 monitor_speed = 115200
 
 ; test_filter = test_smoother
@@ -44,7 +44,7 @@ lib_deps =
   https://github.com/skelstar/Esk8-Shared.git#rtos-queue-subscribe ; v1.1
   https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
 
-  https://github.com/Seeed-Studio/Seeed_Arduino_AS5600.git
+  https://github.com/skelstar/Seeed_Arduino_AS5600.git
   https://github.com/sparkfun/SparkFun_Qwiic_Button_Arduino_Library.git
 
 
@@ -59,6 +59,8 @@ build_flags =
   -D THROTTLE_RAW_CENTRE=1280
   -D THROTTLE_RAW_MIN=0
   -D THROTTLE_RAW_DEADBAND=50
+  -D BATTERY_MEASURE_PIN=34
+
 
 [env:BOARD_NINTENDO_REMOTE]
 build_flags =
@@ -70,6 +72,7 @@ build_flags =
   -D DIR_CLOCKWISE=0
   -D DIR_ANIT_CLOCKWISE=1
   -D THROTTLE_DIRECTION=DIR_CLOCKWISE
+  -D BATTERY_MEASURE_PIN=34
 
 [env:ESP32_Common]
 platform = espressif32
@@ -163,6 +166,7 @@ build_flags =
   ; -D PRINT_BOARD_CLIENT_CONNECTED_CHANGED=1
 
   ; -D PRINT_MUTEX_TAKE_FAIL=1
+  -D PRINT_MUTEX_SUCCESS=1
 
   ; -D PRINT_NINTENDO_BUTTON=1
 
@@ -311,6 +315,11 @@ build_flags =
   ${env:ESP32_CORES.build_flags}
   ${env:ESP32_Common.build_flags}
   ${env:USING_FEATURES.build_flags}
+  -D SEND_TO_BOARD_INTERVAL=200
+  -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=3
+  ; -D PRINT_MUTEX_TAKE_SUCCESS=1
+  ; -D PRINT_MUTEX_GIVE_SUCCESS=1
+
 #------------------------------------------------
 
 [dir]
