More display tests. Able to ASSERT states. Awesomeness.

--- a/platformio.ini
+++ b/platformio.ini
@@ -319,6 +319,9 @@ build_flags =
   -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=3
   ; -D PRINT_MUTEX_TAKE_SUCCESS=1
   ; -D PRINT_MUTEX_GIVE_SUCCESS=1
+  -D PRINT_DISP_STATE=1
+  -D PRINT_DISP_STATE_EVENT=1
+
 
 #------------------------------------------------
 
