More tests around BoardCommsTask. Ids trailing by 2 in response. Not sure why.

--- a/platformio.ini
+++ b/platformio.ini
@@ -123,7 +123,7 @@ build_flags =
   ; -D USING_STATS=1
   -D USING_NINTENDO_BUTTONS=1
   ; -D USING_LED=1
-  -D USING_DEBUG_TASK=1
+  ; -D USING_DEBUG_TASK=1
   -D USING_QWIIC_BUTTON_TASK=1
 
 ;-------------------------------------------------------
@@ -315,8 +315,8 @@ build_flags =
   ${env:ESP32_CORES.build_flags}
   ${env:ESP32_Common.build_flags}
   ${env:USING_FEATURES.build_flags}
-  -D SEND_TO_BOARD_INTERVAL=200
-  -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=3
+  -D SEND_TO_BOARD_INTERVAL=1000
+  -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=1
   ; -D PRINT_MUTEX_TAKE_SUCCESS=1
   ; -D PRINT_MUTEX_GIVE_SUCCESS=1
   -D PRINT_DISP_STATE=1
