- PacketStateQueue and PacketState object - BoardCommsTask updates above objects - other tasks just call `packet.connected()` - `test_board_replies_with_same_id()` refactored

--- a/platformio.ini
+++ b/platformio.ini
@@ -309,6 +309,10 @@ monitor_filters=${env:ESP32_Common.monitor_filters}
 
 test_filter = tasks
 
+lib_deps =
+  ${env.lib_deps}
+  ; ArduinoFake@0.2.2
+
 build_flags =
   ${env.build_flags}
   ${env:NINTENDO_SPI.build_flags}
