- PrimaryButtonQueue - QwiicButton mocked - tests

--- a/platformio.ini
+++ b/platformio.ini
@@ -302,12 +302,14 @@ build_flags =
 
 ;-------------------------------------------------------
 [env:tasks_tests]
-src_filter = ${dir.tasks}
 platform=${env:ESP32_Common.platform}
 board=${env:ESP32_Common.board}
 monitor_filters=${env:ESP32_Common.monitor_filters}
 
-test_filter = tasks
+; src_filter = ${dir.tasks}
+; test_filter = tasks
+src_filter = ${dir.mocked_qwiic_button}
+test_filter = mocked_qwiic_button
 
 lib_deps =
   ${env.lib_deps}
@@ -335,3 +337,4 @@ button2 = +<button2/>
 throttle_mapper = +<throttle_mapper/>
 mag_encoder = +<mag_encoder/>
 tasks = +<tasks/>
+mocked_qwiic_button = +<mocked_qwiic_button/>
