MockNintendoController is working sort of. Buttons aren't mapping properly for some reason.

--- a/platformio.ini
+++ b/platformio.ini
@@ -308,8 +308,10 @@ monitor_filters=${env:ESP32_Common.monitor_filters}
 
 ; src_filter = ${dir.tasks}
 ; test_filter = tasks
-src_filter = ${dir.mocked_qwiic_button}
-test_filter = mocked_qwiic_button
+; src_filter = ${dir.mocked_qwiic_button}
+; test_filter = mocked_qwiic_button
+src_filter = ${dir.test_NintendoController}
+test_filter = test_NintendoController
 
 lib_deps =
   ${env.lib_deps}
@@ -338,3 +340,4 @@ throttle_mapper = +<throttle_mapper/>
 mag_encoder = +<mag_encoder/>
 tasks = +<tasks/>
 mocked_qwiic_button = +<mocked_qwiic_button/>
+test_NintendoController = +<test_NintendoController/>
