test_ThrottleState first test working. Added throttleQueue (I think)

--- a/platformio.ini
+++ b/platformio.ini
@@ -308,10 +308,12 @@ monitor_filters=${env:ESP32_Common.monitor_filters}
 
 ; src_filter = ${dir.tasks}
 ; test_filter = tasks
-; src_filter = ${dir.mocked_qwiic_button}
-; test_filter = mocked_qwiic_button
-src_filter = ${dir.test_NintendoController}
-test_filter = test_NintendoController
+; src_filter = ${dir.test_QwiicButton}
+; test_filter = test_QwiicButton
+; src_filter = ${dir.test_NintendoController}
+; test_filter = test_NintendoController
+src_filter = ${dir.test_ThrottleState}
+test_filter = test_ThrottleState
 
 lib_deps =
   ${env.lib_deps}
@@ -339,5 +341,6 @@ button2 = +<button2/>
 throttle_mapper = +<throttle_mapper/>
 mag_encoder = +<mag_encoder/>
 tasks = +<tasks/>
-mocked_qwiic_button = +<mocked_qwiic_button/>
+test_QwiicButton = +<test_QwiicButton/>
 test_NintendoController = +<test_NintendoController/>
+test_ThrottleState = +<test_ThrottleState/>
