--- a/platformio.ini
+++ b/platformio.ini
@@ -312,8 +312,10 @@ monitor_filters=${env:ESP32_Common.monitor_filters}
 ; test_filter = test_QwiicButton
 ; src_filter = ${dir.test_NintendoController}
 ; test_filter = test_NintendoController
-src_filter = ${dir.test_ThrottleState}
-test_filter = test_ThrottleState
+; src_filter = ${dir.test_ThrottleState}
+; test_filter = test_ThrottleState
+src_filter = ${dir.test_QueueManager}
+test_filter = test_QueueManager
 
 lib_deps =
   ${env.lib_deps}
@@ -344,3 +346,4 @@ tasks = +<tasks/>
 test_QwiicButton = +<test_QwiicButton/>
 test_NintendoController = +<test_NintendoController/>
 test_ThrottleState = +<test_ThrottleState/>
+test_QueueManager = +<test_QueueManager/>
