Changes to make test_scenarios working. Issue with queue managers in BoardCommsTask.

--- a/platformio.ini
+++ b/platformio.ini
@@ -28,6 +28,8 @@ build_flags =
   -D VERSION=3.1
   -D VERSION_BOARD_COMPAT=3.1
   !python ./getCurrentGitBranch.py ; GIT_BRANCH_NAME
+  -D PRINT_THIS=1
+
 
 lib_deps = 
   https://github.com/LennartHennigs/Button2.git
@@ -312,10 +314,12 @@ monitor_filters=${env:ESP32_Common.monitor_filters}
 ; test_filter = test_QwiicButton
 ; src_filter = ${dir.test_NintendoController}
 ; test_filter = test_NintendoController
-src_filter = ${dir.test_ThrottleState}
-test_filter = test_ThrottleState
+; src_filter = ${dir.test_ThrottleState}
+; test_filter = test_ThrottleState
 ; src_filter = ${dir.test_QueueManager}
 ; test_filter = test_QueueManager
+src_filter = ${dir.test_Scenarios}
+test_filter = test_Scenarios
 
 lib_deps =
   ${env.lib_deps}
@@ -347,3 +351,4 @@ test_QwiicButton = +<test_QwiicButton/>
 test_NintendoController = +<test_NintendoController/>
 test_ThrottleState = +<test_ThrottleState/>
 test_QueueManager = +<test_QueueManager/>
+test_Scenarios = +<test_Scenarios/>
