Packet sent on SendNotf trigger. Latency reported.

--- a/platformio.ini
+++ b/platformio.ini
@@ -318,8 +318,8 @@ monitor_filters=${env:ESP32_Common.monitor_filters}
 ; test_filter = test_ThrottleState
 ; src_filter = ${dir.test_QueueManager}
 ; test_filter = test_QueueManager
-src_filter = ${dir.test_Scenarios}
-test_filter = test_Scenarios
+src_filter = ${dir.test_BoardCommsTask}
+test_filter = test_BoardCommsTask
 
 lib_deps =
   ${env.lib_deps}
@@ -351,4 +351,4 @@ test_QwiicButton = +<test_QwiicButton/>
 test_NintendoController = +<test_NintendoController/>
 test_ThrottleState = +<test_ThrottleState/>
 test_QueueManager = +<test_QueueManager/>
-test_Scenarios = +<test_Scenarios/>
+test_BoardCommsTask = +<test_BoardCommsTask/>
