--- a/platformio.ini
+++ b/platformio.ini
@@ -316,10 +316,12 @@ monitor_filters=${env:ESP32_Common.monitor_filters}
 ; test_filter = test_NintendoController
 ; src_filter = ${dir.test_ThrottleState}
 ; test_filter = test_ThrottleState
-src_filter = ${dir.test_QueueManager}
-test_filter = test_QueueManager
+; src_filter = ${dir.test_QueueManager}
+; test_filter = test_QueueManager
 ; src_filter = ${dir.test_BoardCommsTask}
 ; test_filter = test_BoardCommsTask
+src_filter = ${dir.test_TaskBase}
+test_filter = test_TaskBase
 
 lib_deps =
   ${env.lib_deps}
@@ -352,3 +354,4 @@ test_NintendoController = +<test_NintendoController/>
 test_ThrottleState = +<test_ThrottleState/>
 test_QueueManager = +<test_QueueManager/>
 test_BoardCommsTask = +<test_BoardCommsTask/>
+test_TaskBase = +<test_TaskBase/>
